--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "name": "final-project-web-dev-2",
+  "homepage": "https://Tomoyuki3001.github.io/myTrakr-boilerplate",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
   "type": "module",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
@@ -14,5 +17,8 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.1"
+  },
+  "devDependencies": {
+    "gh-pages": "^6.0.0"
   }
 }
